# skync

./: CLAUDE.md  Makefile  ROADMAP.md  book.toml
.claude/: settings.local.json
crates/skillet/src/: wizard.rs
crates/skync-mcp/: Cargo.toml
crates/skync-mcp/src/: main.rs
crates/skync/src/: config.rs  discover.rs  distribute.rs  doctor.rs  lib.rs  library.rs  mcp.rs  status.rs  wizard.rs
docs/src/: SUMMARY.md  architecture.md  commands.md  configuration.md  frontmatter-compatibility.md  introduction.md  mcp-server.md  roadmap.md  test-setup.md  tool-landscape.md
