[package]
name = "skync-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for skync skill distribution"

[[bin]]
name = "skync-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
skync = { path = "../skync" }
